[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debouncer"
dynamic = ["version"]
description = "High-performance debounce library for Python with async support and LLM framework integrations"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
keywords = ["debounce", "throttle", "rate-limit", "llm", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "coverage>=7",
    "mypy>=1.11",
    "ruff>=0.6",
    "pre-commit>=4",
]

[tool.hatch.version]
path = "src/debouncer/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/debouncer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["UP047"]
